welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: ')' expected but integer literal found.
while (baggle Amount<=3){
                      ^RunFour:6: error: illegal start of simple expression
	}
        ^